--- a/enhancing_rag_with_graph.ipynb
+++ b/enhancing_rag_with_graph.ipynb
@@ -614,11 +614,11 @@
       "outputs": [],
       "source": [
         "# Neo4j setup\n",
-        "os.environ[\"NEO4J_URI\"]=\"neo4j+s://fd98554c.databases.neo4j.io:7687\"\n",
-        "os.environ[\"NEO4J_USERNAME\"]=\"neo4j\"\n",
-        "os.environ[\"NEO4J_PASSWORD\"]=\"xqABP_BqOm9OC0U6r-8-2OOd_jtpQSwGMy32vlHmvGM\"\n",
-        "os.environ[\"AURA_INSTANCEID\"]=\"fd98554c\"\n",
-        "os.environ[\"AURA_INSTANCENAME\"]=\"Instance01\"\n",
+        "os.environ[\"NEO4J_URI\"]=\"Your Neo4J URI\"\n",
+        "os.environ[\"NEO4J_USERNAME\"]=\"Your Neo4J User Name\"\n",
+        "os.environ[\"NEO4J_PASSWORD\"]=\"Your Neo4j password\"\n",
+        "os.environ[\"AURA_INSTANCEID\"]=\"Your Neo4J IntstanceID\"\n",
+        "os.environ[\"AURA_INSTANCENAME\"]=\"Your Neo4J Intstance Name\"\n",
         "\n",
         "graph = Neo4jGraph()"
       ]
